services/keycloak/keycloak-gateway.yaml
# Gateway for Keycloak
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: keycloak-gateway
  namespace: keycloak
spec:
  gatewayClassName: istio
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: keycloak.maelkloud.com
      tls:
        mode: Terminate
        certificateRefs:
          - name: keycloak-cert
            kind: Secret
---
# HTTPRoute to expose Keycloak
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: keycloak-route
  namespace: keycloak
spec:
  parentRefs:
    - name: keycloak-gateway
  hostnames:
    - keycloak.maelkloud.com
  rules:
    - backendRefs:
        - name: keycloak
          port: 8080
